test/libsolidity/syntaxTests/contractBaseLocation/library.sol
library L layout at 0x123 {
    function f() public pure { }
}
// ----
// TypeError 7587: (20-25): Storage base location cannot be specified for abstract contracts or libraries
